Fix text height in iOS on iPhone

--- a/done.scss
+++ b/done.scss
@@ -92,6 +92,10 @@ small {
 
 [data-fit-text] {
   text-transform: uppercase;
+
+  @include breakpoint-small {
+    height: 2em;
+  }
 }
 
 input {
